--- a/templates/base.html
+++ b/templates/base.html
@@ -1,45 +1,95 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--<link rel="stylesheet" type="text/css" href="/static/css/style.css">-->
-	<title>{{ title }}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<link rel="stylesheet" type="text/css" href="/static/css/style.css">-->
+    <title>{{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
 </head>
 <body style="padding-top: 6rem;">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none" href="/">
-                    <h1>Rutter</h1>
-                </a>
-                <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                    <li>
-                        <a class="nav-link text-secondary
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start navbar-collapse collapse">
+            <a class="d-flex align-items-center me-auto text-white text-decoration-none navbar-nav" href="/">
+                <h1>Rutter</h1>
+            </a>
+            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small d-flex">
+                <li>
+                    <a class="nav-link text-secondary
                         {% if path == '/' %} text-secondary {% else %} text-white {% endif %}"
-                           href="/">
-                            <svg width="24" height="24" fill="currentColor" class="bi bi-house-door d-block mx-auto mb-1" viewBox="0 0 16 16">
-                                <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
-                            </svg>
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a class="nav-link
-                        {% if path == username %} text-secondary {% else %} text-white {% endif %}" href="/{{ username }}">
-                            <svg width="24" height="24" fill="currentColor" class="bi bi-person d-block mx-auto mb-1" viewBox="0 0 16 16">
-                                <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-                            </svg>
-                            My page
-                        </a>
-                    </li>
-                </ul></div>
+                       href="/">
+                        <svg width="24" height="24" fill="currentColor" class="bi bi-house-door d-block mx-auto mb-1"
+                             viewBox="0 0 16 16">
+                            <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+                        </svg>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link
+                        {% if path == username %} text-secondary {% else %} text-white {% endif %}"
+                       href="/{{ username }}">
+                        <svg width="24" height="24" fill="currentColor" class="bi bi-person d-block mx-auto mb-1"
+                             viewBox="0 0 16 16">
+                            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                        </svg>
+                        My page
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 <main class="container">
     {% block content %}{% endblock %}
+    <div class="card rounded-3 shadow-sm mb-5" style="margin-right: 30%;">
+        <div class="card-header py-3">
+
+            <a style="display: inline-block; vertical-align: middle;" class="bi" href="/ermine_scout">
+                <h3
+                        class="my-0 fw-normal">
+                    <svg width="24" height="24" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                        <path fill-rule="evenodd"
+                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                    </svg>
+                    ermine_scout
+                </h3>
+            </a>
+        </div>
+        <div class="card-body">
+            <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eleifend, lorem eu ultrices posuere,
+                sapien metus venenatis odio, in ultricies elit nibh id arcu. Praesent mattis rhoncus ipsum, eget posuere
+                lorem mattis et. Suspendisse purus ipsum, malesuad
+            </h5>
+            <br>
+            <p>
+                <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseWidthExample" aria-expanded="false"
+                        aria-controls="collapseWidthExample">
+                    <svg width="16" height="16" fill="currentColor" class="bi bi-reply" viewBox="0 0 16 16">
+                        <path d="M6.598 5.013a.144.144 0 0 1 .202.134V6.3a.5.5 0 0 0 .5.5c.667 0 2.013.005 3.3.822.984.624 1.99 1.76 2.595 3.876-1.02-.983-2.185-1.516-3.205-1.799a8.74 8.74 0 0 0-1.921-.306 7.404 7.404 0 0 0-.798.008h-.013l-.005.001h-.001L7.3 9.9l-.05-.498a.5.5 0 0 0-.45.498v1.153c0 .108-.11.176-.202.134L2.614 8.254a.503.503 0 0 0-.042-.028.147.147 0 0 1 0-.252.499.499 0 0 0 .042-.028l3.984-2.933zM7.8 10.386c.068 0 .143.003.223.006.434.02 1.034.086 1.7.271 1.326.368 2.896 1.202 3.94 3.08a.5.5 0 0 0 .933-.305c-.464-3.71-1.886-5.662-3.46-6.66-1.245-.79-2.527-.942-3.336-.971v-.66a1.144 1.144 0 0 0-1.767-.96l-3.994 2.94a1.147 1.147 0 0 0 0 1.946l3.994 2.94a1.144 1.144 0 0 0 1.767-.96v-.667z"/>
+                    </svg>
+                    Reply
+                </button>
+            </p>
+            <div style="min-height: 0px;">
+                <div class="collapse collapse-vertical" id="collapseWidthExample">
+                    <textarea class="rounded-3 card"
+                              style="width: 300px; display: inline-block; vertical-align: middle;"></textarea>
+                    <button style="display: inline-block; vertical-align: middle;" class="btn btn-success mx-3">Send
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 </body>
 </html>
