Added post template

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,8 @@
                 lorem mattis et. Suspendisse purus ipsum, malesuad
             </h5>
             <br>
-            <p>
-                <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse"
+            <div class="p-2 d-flex align-items-center">
+                <button class="btn btn-outline-dark me-auto" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseWidthExample" aria-expanded="false"
                         aria-controls="collapseWidthExample">
                     <svg width="16" height="16" fill="currentColor" class="bi bi-reply" viewBox="0 0 16 16">
@@ -79,12 +79,14 @@
                     </svg>
                     Reply
                 </button>
-            </p>
+                <a href="/post/10224" class="text-muted d-inline-flex justify-content-end align-self-center">Replies: 300</a>
+            </div>
             <div style="min-height: 0px;">
                 <div class="collapse collapse-vertical" id="collapseWidthExample">
                     <textarea class="rounded-3 card"
                               style="width: 300px; display: inline-block; vertical-align: middle;"></textarea>
-                    <button style="display: inline-block; vertical-align: middle;" class="btn btn-success mx-3">Send
+                    <button style="display: inline-block; vertical-align: middle;"
+                            class="btn btn-success mx-3">Send
                     </button>
                 </div>
             </div>
