--- a/templates/news.html
+++ b/templates/news.html
@@ -1,5 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script>
+    let origin = window.location.origin;
+    let api_prefix = '/api'
 
+    api_address = function (address) { return origin + api_prefix + address; }
+
+    function replyToPost(post_id) {
+        var text = document.getElementById('textarea' + post_id).value;
+        if (text.length) == 0
+        {
+            return;
+        }
+        var response = await fetch(api_address("/post"),{method: 'POST', body: JSON.stringify({
+            reply: post_id,
+            text:
+        })});
+        if (response.status == 200) {
+            document.location.reload();
+        }
+        else {
+            console.log(document.status);
+        }
+    }
+</script>
 {% endblock %}
