--- a/templates/news.html
+++ b/templates/news.html
@@ -4,6 +4,7 @@
 <script>
     let origin = window.location.origin;
     let api_prefix = '/api'
+    let username = "{{username}}";
 
     api_address = function (address) { return origin + api_prefix + address; }
 
@@ -15,7 +16,7 @@
         }
         var response = await fetch(api_address("/post"),{method: 'POST', body: JSON.stringify({
             reply: post_id,
-            text:
+            text: text
         })});
         if (response.status == 200) {
             document.location.reload();
