--- a/templates/post-card.html
+++ b/templates/post-card.html
@@ -1,4 +1,5 @@
 <div class="card rounded-3 shadow-sm mb-5" style="margin-right: 30%;">
+    <script src="/static/js/post_card.js" type="text/javascript"></script>
     <div class="card-header py-3">
         <a style="display: inline-block; vertical-align: middle;" class="bi" href="/{{author}}">
             <h3 class="my-0 fw-normal">
