--- a/templates/news.html
+++ b/templates/news.html
@@ -2,4 +2,10 @@
 
 {% block content %}
 
+<script src="/static/js/post_card.js" type="text/javascript"></script>
+<script>var username = "{{username}}";</script>
+<div id="articles"></div>
+
+<script src="/static/js/news_page.js" type="text/javascript"></script>
+
 {% endblock %}
