--- a/templates/enter.html
+++ b/templates/enter.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+    <script src="/static/js/api_handler.js" type="text/javascript"></script>
     <script src="/static/js/enter_page.js"></script>
 
 </head>
@@ -30,11 +31,13 @@
             <div class="card-header"><h3>Welcome again! Please, auth.</h3></div>
             <div class="card-body">
                 <div class="form-floating mb-3">
-                    <input id="usernameInput" class="form-control" type="text" placeholder="your_username" name="username"/>
+                    <input id="usernameInput" class="form-control" type="text" placeholder="your_username"
+                           name="username"/>
                     <label for="usernameInput">Your username</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input id="passwordInput" class="form-control" type="password" placeholder="password123" name="password"/>
+                    <input id="passwordInput" class="form-control" type="password" placeholder="password123"
+                           name="password"/>
                     <label for="passwordInput">Password</label>
                 </div>
                 <button class="btn btn-lg btn-primary" type="button" onclick="try_auth();">Sign In</button>
