--- a/templates/post-card.html
+++ b/templates/post-card.html
@@ -14,6 +14,7 @@
         </a>
     </div>
     <div class="card-body">
+        <small class="text-muted">{{date}}</small>
         <h5>{{text}}</h5>
         <br>
         <div class="p-2 d-flex align-items-center">
