--- a/templates/news.html
+++ b/templates/news.html
@@ -4,7 +4,7 @@
 
 <script src="/static/js/post_card.js" type="text/javascript"></script>
 <script>var username = "{{username}}";</script>
-<div id="articles"></div>
+<div id="articles" style="width: 70%;"></div>
 
 <script src="/static/js/news_page.js" type="text/javascript"></script>
 
