--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -5,15 +5,27 @@
 <div class="d-flex">
     <script src="/static/js/post_card.js" type="text/javascript"></script>
     <script>var username = "{{username}}";</script>
-    <div id="articles" class="d-inline-flex flex-column" style="width: 70%"></div>
+    <div class="d-flex flex-column" style="width: 70%">
+        <div class="mb-5 d-flex flex-row">
+            <textarea class="rounded-3 flex-fill" placeholder="Send new post..." id="newPost"></textarea>
+            <button class="btn btn-success m-3" onclick="add_post();">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-check2" viewBox="0 0 16 16">
+                    <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                </svg>
+            </button>
+        </div>
+        <div id="articles" class="d-flex flex-column"></div>
+    </div>
     <div class="d-inline-flex ms-auto">
         <div id="user-info" class="card d-inline-flex" style="max-height: 12rem;">
             <div class="card-header">
                 <h4 class="my-0 fw-normal">{{ username }}</h4>
             </div>
             <div class="card-body">
-                <p style="text-align: center;"> Bio: {% if edit %} <input type="text" id="bioEdit" class="mx-3" placeholder="{{bio}}">
-                    <button class="btn btn-outline-primary" onclick="save_bio();" style="height: inherit;">
+                <p style="text-align: center;"> Bio: {% if edit %} <input type="text" id="bioEdit" class="mx-3"
+                                                                          placeholder="{{bio}}">
+                    <button class="btn btn-outline-success" onclick="save_bio();" style="height: inherit;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-check2" viewBox="0 0 16 16">
                             <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
